# auth/docs/swagger.yaml
@@ -2,16 +2,16 @@ basePath: /api/v1/auth
 definitions:
   core.Code:
     enum:
-    - INVALID_INITDATA
-    - INVALID_USER_ID
     - OK
     - INTERNAL_ERROR
+    - INVALID_INITDATA
+    - INVALID_USER_ID
     type: string
     x-enum-varnames:
-    - CodeInvalidInitData
-    - CodeInvalidUserID
     - CodeOK
     - CodeInternal
+    - CodeInvalidInitData
+    - CodeInvalidUserID
   core.UserReferrals:
     properties:
       firstname:
@@ -37,7 +37,7 @@ definitions:
       username:
         type: string
     type: object
-host: localhost:3000
+host: localhost:4000
 info:
   contact: {}
   description: This is Auth server.
@@ -97,6 +97,10 @@ paths:
             items:
               $ref: '#/definitions/core.UserReferrals'
             type: array
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/server.errorResponse'
         "401":
           description: Unauthorized
           schema:
